feat(arcane-utils): improve json
1. modify comments
2. fix gson pretty
3. add get engine of JsonFacade

Signed-off-by: mytlx <mytlx1466@gmail.com>